# OC_Employee_Attrition

./: .buildinfo  .env.example  CONTRIBUTING.md  Dockerfile  README.md  api_usage_examples.html  contributing.html  docker-compose.yml  genindex.html  index.html  installation_guide.html  model_documentation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
_modules/: config.html  index.html
_modules/api/: main.html  schemas.html
_modules/data_processing/: load_data.html  preprocess.html
_modules/database/: database_setup.html  init_db.html  models.html
_modules/modeling/: predict.html  train_model.html
_sources/: index.rst.txt  installation_guide.rst.txt
_sources/autoapi/api/: index.rst.txt
_sources/autoapi/data_processing/: index.rst.txt
_sources/autoapi/database/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/api/: index.html
autoapi/api/main/: index.html
autoapi/api/schemas/: index.html
autoapi/config/: index.html
autoapi/data_processing/: index.html
autoapi/data_processing/load_data/: index.html
autoapi/data_processing/preprocess/: index.html
autoapi/database/: index.html
autoapi/database/database_setup/: index.html
autoapi/database/init_db/: index.html
autoapi/database/models/: index.html
autoapi/modeling/: index.html
autoapi/modeling/predict/: index.html
docs/: API_USAGE_EXAMPLES.md  MODEL_DOCUMENTATION.md
docs_sphinx/source/: conf.py  model_documentation.md
models/: attrition_logistic_regression.joblib
scripts/: populate_employees_table.py
src/: config.py
src/api/: main.py  schemas.py
src/data_processing/: load_data.py  preprocess.py
src/database/: database_setup.py  init_db.py  models.py
src/modeling/: predict.py  train_model.py
tests/functional/: test_api.py
tests/unit/: test_init_db.py  test_load_data.py  test_predict.py  test_preprocess.py  test_train_model.py
(+13 files in other folders)
