[project]
name = "OC_Emplyee_Attrition"
version = "1.0"
description = ""
authors = [
    {name = "Cyrille Elie",email = "cyrille.elie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyterlab (>=4.4.1,<5.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "shap (>=0.47.2,<0.48.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
