[project]
name = "OC_Emplyee_Attrition"
version = "0.1.0"
description = "Prédiction de l'attrition des employés"
authors = [
    {name = "Cyrille Elie",email = "cyrille.elie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "shap (>=0.47.2,<0.48.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8" # Ou la version que vous préférez/installez

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
